--- a/src/CurrencyHeading.css
+++ b/src/CurrencyHeading.css
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: 0.5fr repeat(4, 1fr);
   }
-  .headings #symbol, .headings #circ, .headings #total {
+  .headings #symbol, .headings #circ, .headings #total, .headings #history {
     display: none;
   }
 }
